@@ -27,4 +27,5 @@
 19-Jun-2019  - V0.31 Address linting issues and and adjustments for multi-type return values.
 11-Jul-2019  - V0.32 add explicit py2 safe file decompression to avoid encoding problems
 25-Jul-2019  - V0.33 Try to improve retention of ordering for json load
+ 9-Aug-2019  - V0.34 Added retry for all url or service requests
 #
